force-app/main/default/objects/Trend_Threshold__mdt/Trend_Threshold__mdt.object-meta.xml
<CustomObject>
    <label>추세 판정 임계치</label>
    <pluralLabel>추세 판정 임계치</pluralLabel>
    <description>T4-07 추세 이상 판정 규칙의 임계치를 하드코딩 대신 메타데이터 레코드로 보관한다(백로그 06.Metadata_ENV_Matrix 19행 지시). 규칙 ①기준선 대비 하락률 ②연속 하락 횟수 ③허용하한까지 잔여 여유. ③은 WOLI.Threshold_Min__c(T3-16) 전파 후 사용.</description>
</CustomObject>