force-app/main/default/objects/Trend_Threshold__mdt/fields/Drop_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Drop_Rate_Pct__c</fullName>
    <label>하락률 임계치(%)</label>
    <description>규칙 ①: 기준선 대비 하락률이 이 값 이상(음수 방향)이면 추세 이상. 예) 5 = 기준선 대비 -5.0% 이하에서 발동.</description>
    <inlineHelpText>기준선 대비 하락률 임계치를 양수 퍼센트로 입력합니다. 예: 5는 -5.0% 이하를 의미합니다.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>